# sacc-ocs

./: .bugs  .todo  AUTHORS  ChangeLog  Git-SimpleHelp.txt  INSTALL  Makefile.am  Makefile.in  My_Build.sh  README  README.md  UPGRADE  _auto  aclocal.m4  apache.m4  check_cpu.m4  config.h.in  configure  configure.in  data.sql  datadump  init.sql  mysql.m4  squid.m4
addons/: Makefile.am  perm.ix
addons/backup/: backup
addons/chpasswd-ru/: CONTRIBUTORS  ChangeLog  Dutch.h  English.h  French.h  German.h  Hungarian.h  Italian.h  Portuguese.h  README  Russian.h  Spanish.h  chpasswd.c  chpasswd.conf  conf.h  configure.in  info.h  language.h
addons/exlog/: extacclog.diff  readme
addons/krbconv/: Squid2-CodeInfo.txt  Windows-AD.txt  krbconv.sql  krbtst.sh  mybuikd.sh  sacc-ad-ntlm.rar  squid.orig.conf
addons/krbconv/apache2/sites-enabled/: 001-sacc
addons/krbconv/perl5/: AuthenNTLM.pm  README  mydiff.diff
addons/krbconv/sqlinit/: krbconv.sql  options.sql
addons/krbconv/squid3/: squid.conf.dist-orig  squid.orig.conf
addons/krbconv/squid3-ModifySrc/: read.me
addons/krbconv/squid3-ModifySrc/v3.2.3/: Quoting.cc  Quoting.h
addons/krbconv/squid3-ModifySrc/v3.3.9/: Quoting.cc  Quoting.h
addons/krbconv/squid3/default/: squid3
addons/krbconv/web/: .htaccess
addons/krbconv/web/admin/: index.php
addons/krbconv/web/sa/: index.php
addons/krbconv/web/stat/: index.php
addons/racc/: cisco-dump.sql  cisco.conf  get_stat  readme  recount
addons/report/: stat.php  stat_fix.php  stat_mail.php
doc/: Install.notes.txt  Install.txt  Troubleshooting.txt  about.en.txt  about.ru.txt  faq.txt  features.txt  howto-ntlm.txt  howto-ntlm.txt-VeryOld.txt
etc/: Makefile.am  Makefile.in  monthly.sql  php.ini.recommended  pref.php.in  pref.php.orig  recount.sql  squid.orig.conf
etc/init.d/: MySQL.control  SAcc_counter.control  SquiD.control  apache.control  sacc.control
src/: .cproject  .project  Makefile.am  Makefile.in  cisco.cpp  krbconv.cpp  krbtst.sh  main.cpp  mylog.cpp  mylog.h  namepair.cpp  namepair.h  squid.h
src/auth/: Makefile.am  Makefile.in
src/auth/MySQL/: Makefile.am  Makefile.in  mysql_auth
src/auth/NCSA/: Makefile.am  Makefile.in  htpasswd.c
src/auth/SMB/: ChangeLog  Makefile.am  Makefile.in  README  smb_auth.c  smb_auth.sh
src/auth/include/: Array.h  GNUregex.h  Stack.h  asn1.h  cache_snmp.h  hash.h  heap.h  initgroups.h  md5.h  ntlmauth.h  parse.h  radix.h  rfc1035.h  rfc2617.h  snmp-internal.h  snmp-mib.h  snmp.h  snmp_api.h  snmp_api_error.h  snmp_api_util.h  snmp_client.h  snmp_coexist.h  snmp_debug.h  snmp_error.h  snmp_impl.h  snmp_msg.h  snmp_pdu.h  snmp_session.h  snmp_util.h  snmp_vars.h  snprintf.h  splay.h  squid_types.h  tempnam.h  util.h  version.h
src/auth/lib/: Array.c  GNUregex.c  Makefile.am  Makefile.in  Stack.c  base64.c  dlmalloc.c  getfullhostname.c  hash.c  heap.c  html_quote.c  iso3307.c  md5.c  ntlmauth.c  radix.c  rfc1035.c  rfc1123.c  rfc1738.c  rfc2617.c  safe_inet_addr.c  snprintf.c  splay.c  strerror.c  stub_memaccount.c  tempnam.c  util.c  uudecode.c
web/: Makefile.am  Makefile.in
web/htdocs/: .htaccess  .project  1.css  index.php  lang.php
web/htdocs/admin/: functions.php  index.php
web/htdocs/inc/: auth.php  bydate.php  en.php  functions.php  mysql.php  pref.php  ru.php  timer_set.php  timer_show.php  version.php  version.php.in  xmlarr.php
web/htdocs/sa/: check.php  index.php
web/htdocs/stat/: .htaccess  functions.php  index.php
