dnl Process this file with autoconf to produce a configure script.
AC_INIT(chpasswd.c)

AC_PREFIX_DEFAULT(/usr/local/etc/chpasswd)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -lcrypt:
AC_CHECK_LIB(crypt, main)

dnl Check for headers
AC_HEADER_DIRENT
AC_HEADER_STDC

AC_CHECK_HEADERS(crypt.h libc.h pwd.h stdio.h stdlib.h sys/stat.h sys/time.h time.h unistd.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(strstr)

AC_CHECK_LIB(crypt, crypt, [CRYPTLIB="-lcrypt"])
AC_SUBST(CRYPTLIB)

dnl Select language
AC_ARG_ENABLE(language,
[  --enable-language=lang
 			Select Language ],
[          
    if test "$enableval" = 'English' || test "$enableval" = "Dutch" || test "$enableval" = "French" || test "$enableval" = "German" || test "$enableval" = "Portuguese" || test "$enableval" = "Italian" || test "$enableval" = "Hungarian" || test "$enableval" = "Spanish" || test "$enableval" = "Russian"; then
        LANGUAGE=$enableval
     else
        echo "ERROR! Unknown language $enableval"
        exit 1
    fi
],[LANGUAGE="Russian"])
echo "using $LANGUAGE language"
AC_SUBST(LANGUAGE)

dnl Select cgidir
AC_ARG_ENABLE(cgidir,
[  --enable-cgidir=cgidir
 			Select cgidir ],
[          
    if test "$enableval"; then
        CGIDIR=$enableval
    fi
],[CGIDIR="/usr/local/apache/cgi-bin"])
echo "using $CGIDIR as cgi-bin"
AC_SUBST(CGIDIR)


AC_OUTPUT(Makefile)
